added exploration nb

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ conf/**/*credentials*
 data/**
 
 # except their sub-folders
-!data/**/
+#!data/**/
 
 # also keep all .gitkeep files
 !.gitkeep
@@ -23,6 +23,12 @@ data/**
 
 ##########################
 # Common files
+
+# data files
+*.csv
+*.db
+*.pkl
+
 
 # IntelliJ
 .idea/
